cmake_minimum_required(VERSION 3.30)
project(ProyectoFinalPOO)

set(CMAKE_CXX_STANDARD 20)

add_executable(ProyectoFinalPOO main.cpp
        Juego.cpp
        Juego.h
        Heroe.cpp
        Heroe.h
        Inventario.cpp
        Inventario.h
        Item.cpp
        Item.h
        Mazmorra.cpp
        Mazmorra.h
        Sala.cpp
        Sala.h
        Combate.cpp
        Combate.h
        Arma.cpp
        Arma.h
        Armadura.cpp
        Armadura.h
        Accesorio.cpp
        Accesorio.h
        Enemigo.cpp
        Enemigo.h
        MiniJefe.cpp
        MiniJefe.h
        Soldado.cpp
        Soldado.h
        GranJefe.cpp
        GranJefe.h
        Pocion.cpp
        Pocion.h
)
